# megcore-getdata

./: README.md  pyproject.toml
.github/workflows/: megcoredata-actions.yml
get_megdata/: get_testdata.py  test_from_download_nonpytest.py
get_megdata/tests/: test_getdata.py
get_megdata/tests/test_outputs/: bids_outputs_list.txt
